# tumour-growth-patterns-impact-evolution

./: LICENSE  README.md
Scripts for making figures/: arrowNumberDriversCloneDiversity.ipynb  boxEvolutionReplayShannonDiversity.ipynb  boxMacrodiversity.Rmd  boxMacrodiversity.html  boxPowerLawExponent.Rmd  boxPowerLawExponent.html  cumuprobaMicrodiversitySpatialFeatures.ipynb  cumuprobaMicrodiversitySpatialFeaturesNull.ipynb  heatmapFitness.ipynb  heatmapNumberClones.ipynb  kdeCloneDiversityTumourSize.ipynb  lineNumberClonesOverTime.ipynb  lineNumberDriversOverTime.ipynb  linescatterVariousEvolutionaryFeatures.ipynb  probabilityMicrodiversitySpatialFeatures.ipynb  scatterCloneDiversityTumourSize.ipynb  scatterFitnessSpatialFeatures.ipynb  stackedbarCompositionClones.Rmd  stackedbarCompositionClones.html  stripplotParallelEvolutionTumour.ipynb  stripplotYoungestSubclones.ipynb  stripplotYoungestSubclonesTumour.ipynb
Source code for computer simulations/: CMakeLists.txt  tumour_growth_patterns.cu  tumour_growth_patterns.cuh
Source data for figures/Source_Data_Extended_Data_Figure_1/: SourceData_ExtendedData_Fig1a.xlsx  SourceData_ExtendedData_Fig1c_part1.xlsx  SourceData_ExtendedData_Fig1c_part2.xlsx
Source data for figures/Source_Data_Extended_Data_Figure_10/: SourceData_ExtendedData_Fig10.xlsx
Source data for figures/Source_Data_Extended_Data_Figure_2/: SourceData_ExtendedData_Fig2cd.xlsx
Source data for figures/Source_Data_Extended_Data_Figure_4/: SourceData_ExtendedData_Fig4a_part1.xlsx  SourceData_ExtendedData_Fig4a_part2.xlsx  (+2 more)
(+19 files in other folders)
